# FAST-16bit-Corner-Detector

./: CMakeLists.txt  LICENSE  fast.cpp  fast.hpp  main.cpp
data/: image.txt
include/fast16bit/: fast.hpp
src/: fast.cpp  fast_9.cpp  nonmax.cpp
tests/: CMakeLists.txt  test.cpp
